add new community

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=4eee3979ed604b285c24
+github.client.secret=af77174448d7a261c2f72345312324b380b01a35
+github.redirect.uri=http://localhost:8887/callback
