--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8887
 github.client.id=4eee3979ed604b285c24
 github.client.secret=af77174448d7a261c2f72345312324b380b01a35
 github.redirect.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:mysql://localhost:3306/aa?useUnicode=true&characterEncoding=UTF8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=654321
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
