--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/aa?useUnicode=true&characterEn
 spring.datasource.username=root
 spring.datasource.password=654321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.configuration.map-underscore-to-camel-case = true
+
+mybatis.type-aliases-package=com.he.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
